--- a/new-design/css/styles.css
+++ b/new-design/css/styles.css
@@ -2,7 +2,7 @@
 /* :root {
   --colors_basecolor: #5068a8;
 } */
-#toolbox-body {
+#tb-body {
   background-color: #6a747f;
   font-family: Arial, sans-serif;
   height: 100%;
@@ -12,7 +12,7 @@
 }
 
 /*2 - Navbar Styles ********************************************/
-.toolbox-navbar {
+.tb-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,7 +26,7 @@
   min-height: 50px;
 }
 
-.toolbox-navbar h1 {
+.tb-navbar h1 {
   font-size: 18px;
   font-weight: bold;
 }
@@ -63,7 +63,7 @@
   cursor: default;
 }
 
-.toolbox-btn {
+.tb-btn {
   padding: 6px 16px;
   border-radius: 4px;
   font-size: 14px;
@@ -84,41 +84,41 @@ button#open-mapping {
   cursor: not-allowed;
 }
 
-.toolbox-btn-outline {
+.tb-btn-outline {
   border: 1.5px solid var(--colors_basecolor);
   color: var(--colors_basecolor);
   background-color: transparent;
 }
 
-.toolbox-btn-outline svg path {
+.tb-btn-outline svg path {
   fill: var(--colors_basecolor);
 }
 
-.toolbox-btn-outline:hover {
+.tb-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.toolbox-btn-outline:hover svg path {
+.tb-btn-outline:hover svg path {
   fill: #fff;
 }
 
-.toolbox-btn-outline:hover {
+.tb-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.toolbox-btn-primary {
+.tb-btn-primary {
   color: #fff;
   border: 1.5px solid var(--colors_basecolor);
   background-color: var(--colors_basecolor);
 }
 
-.toolbox-btn svg {
+.tb-btn svg {
   margin-right: 10px; /* Adjust space between icon and text */
 }
 /* Container, siderars and main content */
-.toolbox-container {
+.tb-container {
   display: flex;
   overflow: hidden;
   /* top: 64px; */
@@ -215,11 +215,9 @@ button#open-mapping {
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
 
-
   opacity: 0.8;
   transform: scale(1);
   transition: opacity 0.4s ease, transform 0.4s ease;
-
 }
 
 .mobile-frame.removing {
@@ -232,9 +230,8 @@ button#open-mapping {
   transform: scale(1.1);
 }
 
-
 .active-editor {
-  border: 5px solid #5068a8; 
+  border: 5px solid #5068a8;
   box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
 }
 
@@ -293,7 +290,7 @@ button#open-mapping {
 }
 
 /* Input field */
-.toolbox-form-control {
+.tb-form-control {
   padding: 8px;
   border-radius: 7px;
   width: 100%;
@@ -315,7 +312,7 @@ input:focus {
   min-width: 200px;
   margin-right: 10px;
 }
-.theme-selection .toolbox-form-control {
+.theme-selection .tb-form-control {
   padding: 10px;
   height: 35px;
 }
@@ -361,97 +358,124 @@ input:focus {
   cursor: pointer;
 }
 
-.tree {
-  min-height: 20px;
-  padding: 16px;
-  margin-bottom: 20px;
-  /* background-color: #f8f9fa;
-  border: 1px solid #dee2e6;
-  border-radius: 0.25rem; */
+#current-page-title {
+  margin-top: 20px;
+  font-weight: 600;
 }
 
-.tree ul {
-  /* margin-left: 45px; Adjusted */
+.tb-list-container {
+  margin: 0 auto;
 }
 
-.tree li {
-  list-style-type: none;
-  margin: 0;
-  padding: 0 5px; /* Reduced padding */
-  position: relative;
+.tb-list-container ul {
+  list-style: none;
 }
 
-.tree li::before,
-.tree li::after {
-  content: "";
-  left: -15px; /* Adjusted to reduce spacing */
-  position: absolute;
-  right: auto;
+.tb-list-title {
+  margin-bottom: 15px;
+  font-size: 1.5rem;
+  color: #343a40;
+  text-align: center;
 }
 
-.tree li::before {
-  border-left: 2px solid #999;
-  bottom: 50px;
-  height: 26px;
-  top: 0;
-  width: 1px;
+.tb-custom-list {
+  padding: 0;
 }
 
-.tree li::after {
-  border-top: 2px solid #999;
-  border-left: 2px solid #999;
-  height: 10px;
-  top: 10px; /* Adjusted to tighten the spacing */
-  width: 20px; /* Adjusted */
-}
-
-.tree li span {
-  border-radius: 0.25rem;
-  display: inline-block;
-  padding: 3px 8px;
-  text-decoration: none;
-  font-size: 14px;
+.tb-custom-list-item:hover {
   cursor: pointer;
 }
 
-.tree li:last-child::before {
-  height: 20px; /* Adjusted */
+.tb-custom-list-item .fa {
+  margin-right: 10px;
+  transition: transform 0.2s ease;
 }
 
-.tree li.parent_li > ul > li {
+.tb-custom-menu-item {
+  padding: 6px 15px;
+  margin: 5px 0;
+  border: none;
+  border-radius: 3px;
+  background-color: #ebebeb;
+  color: #a8a8a8;
+  transition: background-color 0.2s ease;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  font-size: 16px;
+  align-items: center;
+}
+
+.tb-custom-menu-item .tree-icon {
+  font-size: 16px;
+}
+
+.tb-dropdown-toggle {
   display: block;
+  width: 100%;
 }
 
-.tree li.parent_li::before {
-  height: 20px; /* Adjusted */
+.tb-dropdown-menu {
+  display: none;
+  border: none;
+  z-index: 10;
+  min-width: calc(100% - 50px);
+  padding: 0;
+  margin-left: 40px;
+  gap: 0.3rem;
 }
 
-.tree ul li:hover {
-  color: #173f5f;
-  font-weight: 700;
+.tb-dropdown-item {
+  padding: 6px 15px;
+  background-color: #ebebeb;
+  color: #a8a8a8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  border-radius: 3px;
 }
 
-.tree ul li:hover .delete-tree-item {
-  /* opacity: 1 !important; */
-  font-size: 10px;
+.tb-dropdown-item:last-child {
+  border-bottom: none;
 }
 
-.selected-page {
-  color: #173f5f;
-  font-weight: 700;
+.tb-dropdown-item:hover {
+  background-color: #e9ecef;
+  cursor: pointer;
 }
 
-li .selected-page::before,
-li .selected-page::after {
-  border-color: #173f5f;
+.tb-dropdown.active .tb-dropdown-menu {
+  display: flex;
+  flex-direction: column;
 }
 
-.tree .selected-page::before {
-  border-left: 2px solid #173f5f;
+.tb-dropdown.active .fa-caret-right {
+  transform: rotate(90deg);
 }
-.tree .selected-page::after {
-  border-top: 2px solid #173f5f;
-  border-left: 2px solid #173f5f;
+
+.tb-delete-icon {
+  position: relative;
+  color: #536baa;
+  font-size: 12px;
+  opacity: 0;
+}
+
+.tb-custom-menu-item:hover,
+.tb-dropdown-item:hover {
+  color: #536baa;
+}
+
+.tb-dropdown-item:hover .tb-delete-icon {
+  opacity: 1;
+}
+
+.tb-custom-menu-item:hover .tb-delete-icon {
+  opacity: 1;
+}
+
+.tb-custom-menu-item.active-tree-item {
+  color: #536baa;
 }
 
 .sidebar-section {
@@ -626,7 +650,7 @@ li .selected-page::after {
   gap: 0.8rem;
 }
 
-.toolbox-btn.cta-button-layout {
+.tb-btn.cta-button-layout {
   width: 100%;
   border-radius: 7px;
   border: 1px solid #b4b9bd;
@@ -636,7 +660,7 @@ li .selected-page::after {
   vertical-align: middle;
 }
 
-.toolbox-btn.cta-button-layout:hover {
+.tb-btn.cta-button-layout:hover {
   background-color: #e9e9e9;
 }
 
@@ -757,13 +781,13 @@ li .selected-page::after {
   font-size: 10px;
 }
 
-.toolbox-tabs {
+.tb-tabs {
   display: flex;
   background-color: #e9ecef;
   border-radius: 12px;
 }
 
-.toolbox-tabs button {
+.tb-tabs button {
   flex: 1;
   padding: 8px;
   background-color: #e9ecef;
@@ -778,18 +802,18 @@ li .selected-page::after {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.toolbox-tabs .toolbox-tab-button:hover {
+.tb-tabs .tb-tab-button:hover {
   background-color: #dee2e6;
 }
 
-.toolbox-tabs .toolbox-tab-button.active {
+.tb-tabs .tb-tab-button.active {
   background-color: #ffffff;
   color: var(--colors_basecolor);
   font-weight: 600;
   border: 1px solid var(--colors_basecolor);
 }
 
-.toolbox-tab-content {
+.tb-tab-content {
   display: none;
 }
 
@@ -824,7 +848,7 @@ li .selected-page::after {
   border: 2.5px dashed var(--colors_basecolor);
 }
 
-.toolbox-modal {
+.tb-modal {
   display: none;
   position: fixed;
   top: 0;
@@ -837,7 +861,7 @@ li .selected-page::after {
   z-index: 99999;
 }
 
-.toolbox-modal-content {
+.tb-modal-content {
   background-color: white;
   border-radius: 8px;
   padding: 40px;
@@ -846,14 +870,14 @@ li .selected-page::after {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.toolbox-modal-header {
+.tb-modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
 }
 
-.toolbox-modal-header h2 {
+.tb-modal-header h2 {
   margin: 0;
   color: var(--colors_basecolor);
 }
@@ -1081,11 +1105,11 @@ li .selected-page::after {
 }
 
 /* services/action listing */
-.toolbox-dropdown {
+.tb-dropdown {
   width: 100%;
   position: relative;
 }
-.toolbox-dropdown-header {
+.tb-dropdown-header {
   font-size: 14px;
   padding: 6px;
   border: 1px solid #b4b9bd;
@@ -1096,7 +1120,7 @@ li .selected-page::after {
   cursor: pointer;
   background-color: white;
 }
-.toolbox-dropdown-menu {
+.tb-dropdown-menu {
   position: absolute;
   top: 50px;
   width: 100%;
@@ -1233,7 +1257,7 @@ i.fa {
       height: 85vh; */
     max-width: 280px;
     max-height: 560px;
-    
+
     /* min-height: 560px; */
   }
 
@@ -1284,11 +1308,9 @@ i.fa {
   width: calc(100% - 2px) !important;
 }
 
-
 #child-container {
-  height:100%;
-  width:100%;
+  height: 100%;
+  width: 100%;
   /* justify-items: center; */
   justify-content: center;
 }
-
