--- a/new-design/css/styles.css
+++ b/new-design/css/styles.css
@@ -1203,11 +1203,12 @@ li .selected-page::after {
   border-radius: 8px;
   font-size: 14px;
 }
-i.fa {
+
+/* i.fa {
   font-weight: 600;
   color: #b4b9bd;
   font-size: 12px;
-}
+} */
 
 .no-records-message {
   color: red; /* Change this to your desired color */
