--- a/new-design/css/styles.css
+++ b/new-design/css/styles.css
@@ -2,7 +2,7 @@
 /* :root {
   --colors_basecolor: #5068a8;
 } */
-#tb-body {
+#toolbox-body {
   background-color: #6a747f;
   font-family: Arial, sans-serif;
   height: 100%;
@@ -12,7 +12,7 @@
 }
 
 /*2 - Navbar Styles ********************************************/
-.tb-navbar {
+.toolbox-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,7 +26,7 @@
   min-height: 50px;
 }
 
-.tb-navbar h1 {
+.toolbox-navbar h1 {
   font-size: 18px;
   font-weight: bold;
 }
@@ -63,7 +63,7 @@
   cursor: default;
 }
 
-.tb-btn {
+.toolbox-btn {
   padding: 6px 16px;
   border-radius: 4px;
   font-size: 14px;
@@ -84,41 +84,41 @@ button#open-mapping {
   cursor: not-allowed;
 }
 
-.tb-btn-outline {
+.toolbox-btn-outline {
   border: 1.5px solid var(--colors_basecolor);
   color: var(--colors_basecolor);
   background-color: transparent;
 }
 
-.tb-btn-outline svg path {
+.toolbox-btn-outline svg path {
   fill: var(--colors_basecolor);
 }
 
-.tb-btn-outline:hover {
+.toolbox-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.tb-btn-outline:hover svg path {
+.toolbox-btn-outline:hover svg path {
   fill: #fff;
 }
 
-.tb-btn-outline:hover {
+.toolbox-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.tb-btn-primary {
+.toolbox-btn-primary {
   color: #fff;
   border: 1.5px solid var(--colors_basecolor);
   background-color: var(--colors_basecolor);
 }
 
-.tb-btn svg {
+.toolbox-btn svg {
   margin-right: 10px; /* Adjust space between icon and text */
 }
 /* Container, siderars and main content */
-.tb-container {
+.toolbox-container {
   display: flex;
   overflow: hidden;
   /* top: 64px; */
@@ -290,7 +290,7 @@ button#open-mapping {
 }
 
 /* Input field */
-.tb-form-control {
+.toolbox-form-control {
   padding: 8px;
   border-radius: 7px;
   width: 100%;
@@ -312,7 +312,7 @@ input:focus {
   min-width: 200px;
   margin-right: 10px;
 }
-.theme-selection .tb-form-control {
+.theme-selection .toolbox-form-control {
   padding: 10px;
   height: 35px;
 }
@@ -358,9 +358,9 @@ input:focus {
   cursor: pointer;
 }
 
-#current-page-title {
-  margin-top: 20px;
+h5#current-page-title {
   font-weight: 600;
+  margin-top: 20px;
 }
 
 .tb-list-container {
@@ -650,7 +650,7 @@ input:focus {
   gap: 0.8rem;
 }
 
-.tb-btn.cta-button-layout {
+.toolbox-btn.cta-button-layout {
   width: 100%;
   border-radius: 7px;
   border: 1px solid #b4b9bd;
@@ -660,7 +660,7 @@ input:focus {
   vertical-align: middle;
 }
 
-.tb-btn.cta-button-layout:hover {
+.toolbox-btn.cta-button-layout:hover {
   background-color: #e9e9e9;
 }
 
@@ -781,13 +781,13 @@ input:focus {
   font-size: 10px;
 }
 
-.tb-tabs {
+.toolbox-tabs {
   display: flex;
   background-color: #e9ecef;
   border-radius: 12px;
 }
 
-.tb-tabs button {
+.toolbox-tabs button {
   flex: 1;
   padding: 8px;
   background-color: #e9ecef;
@@ -802,18 +802,18 @@ input:focus {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.tb-tabs .tb-tab-button:hover {
+.toolbox-tabs .toolbox-tab-button:hover {
   background-color: #dee2e6;
 }
 
-.tb-tabs .tb-tab-button.active {
+.toolbox-tabs .toolbox-tab-button.active {
   background-color: #ffffff;
   color: var(--colors_basecolor);
   font-weight: 600;
   border: 1px solid var(--colors_basecolor);
 }
 
-.tb-tab-content {
+.toolbox-tab-content {
   display: none;
 }
 
@@ -848,7 +848,7 @@ input:focus {
   border: 2.5px dashed var(--colors_basecolor);
 }
 
-.tb-modal {
+.toolbox-modal {
   display: none;
   position: fixed;
   top: 0;
@@ -861,7 +861,7 @@ input:focus {
   z-index: 99999;
 }
 
-.tb-modal-content {
+.toolbox-modal-content {
   background-color: white;
   border-radius: 8px;
   padding: 40px;
@@ -870,14 +870,14 @@ input:focus {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.tb-modal-header {
+.toolbox-modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
 }
 
-.tb-modal-header h2 {
+.toolbox-modal-header h2 {
   margin: 0;
   color: var(--colors_basecolor);
 }
@@ -1105,11 +1105,11 @@ input:focus {
 }
 
 /* services/action listing */
-.tb-dropdown {
+.toolbox-dropdown {
   width: 100%;
   position: relative;
 }
-.tb-dropdown-header {
+.toolbox-dropdown-header {
   font-size: 14px;
   padding: 6px;
   border: 1px solid #b4b9bd;
@@ -1120,7 +1120,7 @@ input:focus {
   cursor: pointer;
   background-color: white;
 }
-.tb-dropdown-menu {
+.toolbox-dropdown-menu {
   position: absolute;
   top: 50px;
   width: 100%;
@@ -1256,7 +1256,7 @@ i.fa {
     /* width: 80vw;
       height: 85vh; */
     max-width: 280px;
-    max-height: 560px;
+    max-height: 550px;
 
     /* min-height: 560px; */
   }
