--- a/new-design/css/styles.css
+++ b/new-design/css/styles.css
@@ -2,7 +2,7 @@
 /* :root {
   --colors_basecolor: #5068a8;
 } */
-#toolbox-body {
+#tb-body {
   background-color: #6a747f;
   font-family: Arial, sans-serif;
   height: 100%;
@@ -12,7 +12,7 @@
 }
 
 /*2 - Navbar Styles ********************************************/
-.toolbox-navbar {
+.tb-navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,7 +26,7 @@
   min-height: 50px;
 }
 
-.toolbox-navbar h1 {
+.tb-navbar h1 {
   font-size: 18px;
   font-weight: bold;
 }
@@ -63,7 +63,7 @@
   cursor: default;
 }
 
-.toolbox-btn {
+.tb-btn {
   padding: 6px 16px;
   border-radius: 4px;
   font-size: 14px;
@@ -84,41 +84,41 @@ button#open-mapping {
   cursor: not-allowed;
 }
 
-.toolbox-btn-outline {
+.tb-btn-outline {
   border: 1.5px solid var(--colors_basecolor);
   color: var(--colors_basecolor);
   background-color: transparent;
 }
 
-.toolbox-btn-outline svg path {
+.tb-btn-outline svg path {
   fill: var(--colors_basecolor);
 }
 
-.toolbox-btn-outline:hover {
+.tb-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.toolbox-btn-outline:hover svg path {
+.tb-btn-outline:hover svg path {
   fill: #fff;
 }
 
-.toolbox-btn-outline:hover {
+.tb-btn-outline:hover {
   background-color: var(--colors_basecolor);
   color: #fff;
 }
 
-.toolbox-btn-primary {
+.tb-btn-primary {
   color: #fff;
   border: 1.5px solid var(--colors_basecolor);
   background-color: var(--colors_basecolor);
 }
 
-.toolbox-btn svg {
+.tb-btn svg {
   margin-right: 10px; /* Adjust space between icon and text */
 }
 /* Container, siderars and main content */
-.toolbox-container {
+.tb-container {
   display: flex;
   overflow: hidden;
   /* top: 64px; */
@@ -150,7 +150,7 @@ button#open-mapping {
 
 .sidebar,
 .main-content {
-  height: 78vh;
+  height: 100vh;
   overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
@@ -290,7 +290,7 @@ button#open-mapping {
 }
 
 /* Input field */
-.toolbox-form-control {
+.tb-form-control {
   padding: 8px;
   border-radius: 7px;
   width: 100%;
@@ -312,7 +312,7 @@ input:focus {
   min-width: 200px;
   margin-right: 10px;
 }
-.theme-selection .toolbox-form-control {
+.theme-selection .tb-form-control {
   padding: 10px;
   height: 35px;
 }
@@ -650,7 +650,7 @@ h5#current-page-title {
   gap: 0.8rem;
 }
 
-.toolbox-btn.cta-button-layout {
+.tb-btn.cta-button-layout {
   width: 100%;
   border-radius: 7px;
   border: 1px solid #b4b9bd;
@@ -660,7 +660,7 @@ h5#current-page-title {
   vertical-align: middle;
 }
 
-.toolbox-btn.cta-button-layout:hover {
+.tb-btn.cta-button-layout:hover {
   background-color: #e9e9e9;
 }
 
@@ -781,13 +781,13 @@ h5#current-page-title {
   font-size: 10px;
 }
 
-.toolbox-tabs {
+.tb-tabs {
   display: flex;
   background-color: #e9ecef;
   border-radius: 12px;
 }
 
-.toolbox-tabs button {
+.tb-tabs button {
   flex: 1;
   padding: 8px;
   background-color: #e9ecef;
@@ -802,18 +802,18 @@ h5#current-page-title {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.toolbox-tabs .toolbox-tab-button:hover {
+.tb-tabs .tb-tab-button:hover {
   background-color: #dee2e6;
 }
 
-.toolbox-tabs .toolbox-tab-button.active {
+.tb-tabs .tb-tab-button.active {
   background-color: #ffffff;
   color: var(--colors_basecolor);
   font-weight: 600;
   border: 1px solid var(--colors_basecolor);
 }
 
-.toolbox-tab-content {
+.tb-tab-content {
   display: none;
 }
 
@@ -848,7 +848,7 @@ h5#current-page-title {
   border: 2.5px dashed var(--colors_basecolor);
 }
 
-.toolbox-modal {
+.tb-modal {
   display: none;
   position: fixed;
   top: 0;
@@ -861,7 +861,7 @@ h5#current-page-title {
   z-index: 99999;
 }
 
-.toolbox-modal-content {
+.tb-modal-content {
   background-color: white;
   border-radius: 8px;
   padding: 40px;
@@ -870,14 +870,14 @@ h5#current-page-title {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.toolbox-modal-header {
+.tb-modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 40px;
 }
 
-.toolbox-modal-header h2 {
+.tb-modal-header h2 {
   margin: 0;
   color: var(--colors_basecolor);
 }
@@ -914,7 +914,7 @@ h5#current-page-title {
 
 .file-list {
   margin-bottom: 20px;
-  max-height: 400px;
+  max-height: 300px;
   overflow: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
@@ -963,6 +963,18 @@ h5#current-page-title {
   margin-left: 10px;
 }
 
+.file-item .delete-media {
+  font-size: 16px;
+  margin-left: 10px;
+  color: #a00c0c;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.file-item:hover .delete-media {
+  opacity: 1;
+}
+
 .modal-actions {
   margin-top: 40px;
   display: none;
@@ -981,7 +993,7 @@ h5#current-page-title {
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: start;
-  z-index: 999;
+  z-index: 999999999;
 }
 .popup {
   width: 530px;
@@ -1032,7 +1044,7 @@ h5#current-page-title {
   display: flex;
   flex-direction: column-reverse;
   gap: 10px;
-  z-index: 99999;
+  z-index: 9999999;
   width: 400px;
 }
 
@@ -1105,11 +1117,11 @@ h5#current-page-title {
 }
 
 /* services/action listing */
-.toolbox-dropdown {
+.tb-dropdown {
   width: 100%;
   position: relative;
 }
-.toolbox-dropdown-header {
+.tb-dropdown-header {
   font-size: 14px;
   padding: 6px;
   border: 1px solid #b4b9bd;
@@ -1120,7 +1132,7 @@ h5#current-page-title {
   cursor: pointer;
   background-color: white;
 }
-.toolbox-dropdown-menu {
+.tb-dropdown-menu {
   position: absolute;
   top: 50px;
   width: 100%;
