--- a/new-design/css/styles.css
+++ b/new-design/css/styles.css
@@ -233,9 +233,9 @@ button#open-mapping {
   min-height: 400px;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
-  opacity: 0.8;
-  transform: scale(1);
-  transition: opacity 0.4s ease, transform 0.4s ease;
+  opacity: 1;
+  /* transform: scale(1);
+  transition: opacity 0.4s ease, transform 0.4s ease; */
 }
 
 .mobile-frame.removing {
