--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,6 +10,7 @@
   padding: 0;
   box-sizing: border-box;
   margin-top: -20px;
+  margin-right: -20px;
 }
 #tb-body input:focus {
   outline: 1px solid #B4B9BD;
@@ -845,7 +846,7 @@ h5#current-page-title {
 
 .cta-button-layout-container {
   justify-content: space-between;
-  display: flex;
+  display: none;
   margin-bottom: 16px;
   gap: 0.8rem;
 }
