--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -803,6 +803,55 @@ h5#current-page-title {
   color: #303030b5;
 }
 
+.tile-img-container {
+  position: relative;
+  width: 100px; /* Adjust based on the size of your image */
+  height: 65px;  /* Adjust based on the size of your image */
+  border-radius: 8px;
+  background-color: #f0f0f0; /* Fallback background color */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.tile-img-container img {
+    border-radius: 8px;
+    opacity: 0.9;
+}
+
+.tile-img-container:hover img {
+    opacity: 1;
+}
+
+.thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.tile-img-delete-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 34px;
+  height: 34px;
+  background-color: white;
+  color: #ccc;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  padding: 1px;
+  font-size: 26px;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.1s ease;
+}
+
+.tile-img-container:hover .tile-img-delete-button {
+    border: 2px solid #222f54;
+    color: #222f54;
+}
 .title-style {
   display: flex;
   gap: 1rem;
