--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -207,8 +207,8 @@ button#open-mapping {
   margin: 10px;
 }
 
-.page-navigator-left button,
-.page-navigator-right button {
+span#scroll-left,
+span#scroll-right {
   background-color: white;
   color: #5068a8;
   border: none;
@@ -220,9 +220,9 @@ button#open-mapping {
   height: 50px;
 }
 
-.page-navigator-left g:hover,
-.page-navigator-right g:hover {
-  fill: #222f54;
+span#scroll-left:hover,
+span#scroll-right:hover  {
+  background-color: #222f54;
   cursor: pointer;
 }
 
@@ -309,7 +309,7 @@ button#open-mapping {
   justify-content: center;
 }
 
-#content-back-button {
+.content-back-button {
   height: 40px;
   width: 40px;
   cursor: pointer;
@@ -838,8 +838,8 @@ h5#current-page-title {
 
 .tile-img-container {
   position: relative;
-  width: 48px;
-  height: 38px;
+  width: 45px;
+  height: 37px;
   background-color: #f0f0f0;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   border: 1px solid #b4b9bd;
