--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -210,12 +210,14 @@ button#open-mapping {
 span#scroll-left,
 span#scroll-right {
   background-color: white;
+  justify-content: center;
+  align-items: center;
   color: #5068a8;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
   border-radius: 50%;
-  font-size: 16px;
+  font-size: 25px;
   width: 50px;
   height: 50px;
 }
@@ -223,18 +225,8 @@ span#scroll-right {
 span#scroll-left:hover,
 span#scroll-right:hover  {
   background-color: #222f54;
+  color: #fff;
   cursor: pointer;
-}
-
-.page-navigator-left path:hover,
-.page-navigator-right path:hover {
-  /* fill: #fff; */
-  cursor: pointer;
-}
-
-.page-navigator-left:hover path,
-.page-navigator-right:hover path {
-  fill: #fff;
 }
 
 /* Mobile frame */
