--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -711,7 +711,7 @@ h5#current-page-title {
   border: 1px solid #ddd;
   border-radius: 6px;
   background-color: #ffffff;
-  width: fit-content;
+  width: 100%;
   margin: 20px auto;
   gap: 0.13rem;
 }
@@ -1050,8 +1050,8 @@ h5#current-page-title {
   padding: 4px 8px;
   text-align: center;
   cursor: pointer;
-  height: 100%;
-  width: 100%;
+  height: 60px;
+  width: 52px;
 }
 
 .sidebar-section .icons-list .icon svg {
@@ -1734,29 +1734,34 @@ h5#current-page-title {
 }
 
 .preloader {
-  opacity: 0; /* Add this line */
+  opacity: 0;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(0, 0, 0, 0.7);  
   display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(3px);  
 }
 
 .spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #222f54;
+  width: 40px;
+  height: 40px;
+  border: 3px solid rgba(255, 255, 255, 0.3);  
   border-radius: 50%;
-  animation: spin 1s linear infinite;
+  border-top-color: #fff;  
+  animation: spin 1s ease-in-out infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
