added image upload progress bar

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -223,7 +223,7 @@ span#scroll-right {
 }
 
 span#scroll-left:hover,
-span#scroll-right:hover  {
+span#scroll-right:hover {
   background-color: #222f54;
   color: #fff;
   cursor: pointer;
@@ -1257,8 +1257,37 @@ h5#current-page-title {
   cursor: pointer;
 }
 
+.file-info .file-info-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .file-item:hover .delete-media {
   opacity: 1;
+}
+
+.file-item .progress-bar {
+  height: 6px;
+  background: #fff;
+  border-radius: 3px;
+  overflow: hidden;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  width: 100%;
+}
+
+.file-item .progress {
+  height: 100%;
+  background: #222f54;
+  width: 0;
+  transition: width 0.3s ease;
+}
+
+.file-item .progress-text {
+  font-size: 0.8rem;
+  color: #666;
 }
 
 #browseLink {
@@ -1740,20 +1769,20 @@ h5#current-page-title {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);  
+  background: rgba(0, 0, 0, 0.7);
   display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  backdrop-filter: blur(3px);  
+  backdrop-filter: blur(3px);
 }
 
 .spinner {
   width: 40px;
   height: 40px;
-  border: 3px solid rgba(255, 255, 255, 0.3);  
+  border: 3px solid rgba(255, 255, 255, 0.3);
   border-radius: 50%;
-  border-top-color: #fff;  
+  border-top-color: #fff;
   animation: spin 1s ease-in-out infinite;
 }
 
