--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -815,7 +815,7 @@ h5#current-page-title {
 }
 
 .bg-section input:focus {
-  outline: none !important; 
+  outline: none !important;
   border: none !important;
 }
 
@@ -1567,13 +1567,14 @@ h5#current-page-title {
   margin-top: 8px;
   padding-left: 20px;
   position: relative;
-  display: inline-block;
   width: 100%;
+  gap: 0.5rem;
 }
+
 .search-container input[type="text"] {
   padding: 8px 8px 8px 30px;
   border-radius: 6px;
-  width: 90%;
+  width: 100%;
   border: 1px solid #b4b9bd;
   outline: none;
   box-sizing: border-box;
@@ -1586,7 +1587,7 @@ h5#current-page-title {
   top: 50%;
   transform: translateY(-50%);
   font-size: 14px;
-  color: #666;
+  color: #66666687;
 }
 
 .search-box input {
@@ -1595,6 +1596,21 @@ h5#current-page-title {
   border: 1px solid #b4b9bd;
   border-radius: 6px;
   font-size: 14px;
+}
+
+button.add-new-service {
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  border: none;
+  background-color: #222f54;
+  color: white;
+  display: none;
+}
+
+button.add-new-service i {
+  font-size: 28px;
+  font-weight: 500;
 }
 
 /* i.fa {
