--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -5,8 +5,8 @@
   --background-color: #f5f5f5;
   --text-color: #333333;
   --button-bg-color: #3498db;
-  --button-text-color: #ffffff; 
-  --card-bg-color: #ffffff; 
+  --button-text-color: #ffffff;
+  --card-bg-color: #ffffff;
   --card-text-color: #333333;
   --accent-color: #333333;
   --font-family: "Segoe UI", sans-serif;
@@ -90,11 +90,12 @@ button {
   border: 2px dashed #4c53577d;
   border-radius: 8px;
   height: 7rem;
-  padding: 1rem;
+  padding: 0.4rem;
   background-color: transparent;
   display: flex;
   flex-direction: column;
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
+  cursor: move;
 }
 
 .template-block:hover {
@@ -110,7 +111,7 @@ button {
 
 .content-page-block {
   border-radius: 13px;
-  width: 100% !important; 
+  width: 100% !important;
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -240,6 +241,7 @@ button {
   margin-bottom: 0.5rem;
   border: 2px dashed #4c53577d;
   display: none;
+  cursor: default;
 }
 
 .template-wrapper:hover .tile-icon {
@@ -254,8 +256,9 @@ button {
 
 .tile-title {
   font-size: 0.8rem;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-weight: 400;
+  cursor: default;
 }
 
 .tile-close-icon {
@@ -290,7 +293,6 @@ button {
   position: relative;
   width: fit-content;
 }
-
 
 .tile-title-section:hover {
   border: 2px dashed #4c53577d;
@@ -361,6 +363,8 @@ button {
   display: flex;
   flex-direction: column;
   margin: 0.5rem;
+  margin-right: 1.1rem;
+  text-transform: uppercase;
 }
 
 .cta-button {
@@ -505,6 +509,6 @@ button {
 }
 
 @font-face {
-  font-family: 'Segoe UI';
-  src: url('../fonts/segoeui.ttf') format('truetype');
+  font-family: "Segoe UI";
+  src: url("../fonts/segoeui.ttf") format("truetype");
 }
