--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -279,15 +279,93 @@ span#scroll-right:hover {
 }
 
 /* App bar */
-.app-bar {
+.app-bar,
+.home-app-bar {
   display: flex;
   align-items: center;
   gap: 8px;
   padding: 12px 16px;
-  /* background-color: white; */
-  /* border-bottom: 1px solid #e5e7eb; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial,
-    sans-serif;
+}
+
+.home-app-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-app-bar .logo-section,
+.home-app-bar .profile-section {
+  background-color: #c2c2c2;
+}
+
+.home-app-bar .logo-section {
+  padding: 8px;
+  display: flex;
+  width: 50%;
+  justify-content: center;
+  color: #fff;
+  font-family: Inter;
+  border-radius: 5px;
+}
+
+.home-app-bar .profile-section {
+  background-color: #c2c2c2;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-app-bar span.appbar-add-logo,
+.home-app-bar span.appbar-add-profile,
+.home-app-bar span.appbar-edit-logo {
+  position: absolute;
+  right: 48%;
+  top: 75px;
+  color: #222f54;
+  height: 20px;
+  width: 20px;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  border: 1px solid #222f54;
+  font-size: 12px;
+  padding: 8px;
+}
+
+.home-app-bar span.appbar-add-profile {
+  right: 4%;
+  top: 75px;
+}
+
+.home-app-bar span.appbar-add-logo:hover,
+.home-app-bar span.appbar-add-profile:hover,
+.home-app-bar span.appbar-edit-logo:hover {
+  background-color: #222f54;
+  color: white;
+  cursor: pointer;
+}
+
+.logo-added {
+  width: 55%;
+  height: auto;
+  display: flex;
+  border: 1px dashed #bdbdbd;
+  padding-right: 12px;
+}
+
+.logo-added img {
+  width: 100%;
+}
+
+.home-app-bar span.appbar-edit-logo {
+  font-size: 8px;
+  right: 42%;
+  top: 75px;
 }
 
 .back-button {
