--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -41,7 +41,7 @@ button {
 .frame-container,
 .content-frame-container,
 .form-frame-container {
-  min-height: 100vh;
+  max-height: 100vh;
   padding: 1em;
   display: flex;
   flex-direction: column;
@@ -49,7 +49,25 @@ button {
   width: 100%;
   background-color: #fdfdfd;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-y: auto; /* Adds vertical scrolling */
+  /* scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1; */
+}
+
+.frame-container::-webkit-scrollbar,
+.content-frame-container::-webkit-scrollbar,
+.form-frame-container::-webkit-scrollbar {
+  width: 2px;
+}
+
+.frame-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.frame-container::-webkit-scrollbar-thumb,
+.content-frame-container::-webkit-scrollbar-thumb,
+.form-frame-container::-webkit-scrollbar-thumb {
+  background: #222f54a4;
 }
 
 .form-frame-container {
@@ -259,6 +277,7 @@ button {
   text-transform: capitalize;
   font-weight: 400;
   cursor: default;
+  overflow-wrap: anywhere;
 }
 
 .tile-close-icon {
