--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -256,7 +256,6 @@ button {
   font-size: 0.8rem;
   text-transform: uppercase;
   font-weight: 400;
-  color: #ffffff;
 }
 
 .tile-close-icon {
@@ -285,6 +284,7 @@ button {
 .tile-title-section {
   position: relative;
   width: -webkit-fill-available;
+  overflow: clip;
 }
 
 .tile-icon-section {
