create page in modal

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,8 +13,8 @@
   margin-right: -20px;
 }
 #tb-body input:focus {
-  outline: 1px solid #b4b9bd;
-  border: 1px solid #b4b9bd;
+  outline: 1px solid #b4b9bd!important;
+  border: 1px solid #b4b9bd!important;
 }
 
 #tb-body select:focus {
@@ -427,6 +427,13 @@ span#scroll-right:hover {
   width: 100%;
   border: 1px solid #b4b9bd;
   /* box-shadow: 0px 3px 6px #00000029; */
+}
+.form-field label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 .custom-selection {
@@ -1024,11 +1031,12 @@ h5#current-page-title {
 }
 
 #call-to-actions {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  display: flex;
+  /* grid-template-columns: repeat(auto-fit, minmax(40px, 1fr)); */
   gap: 0.4rem;
   align-items: center;
   margin-bottom: 10px;
+  flex-wrap: wrap;
 }
 
 .call-to-action-item {
@@ -1437,7 +1445,8 @@ h5#current-page-title {
 }
 
 /* popup */
-.popup-modal {
+.popup-modal,
+.popup-modal-link {
   display: none;
   position: fixed;
   top: 0;
