--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -365,6 +365,12 @@ span#scroll-right:hover {
   height: 40px;
 }
 
+@media (max-width: 1440px) {
+  .logo-added img {
+    height: 35px;
+  }
+}
+
 .profile-section img {
   width: 40px;
   height: 40px;
