--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,8 +13,8 @@
   margin-right: -20px;
 }
 #tb-body input:focus {
-  outline: 1px solid #b4b9bd!important;
-  border: 1px solid #b4b9bd!important;
+  outline: 1px solid #b4b9bd !important;
+  border: 1px solid #b4b9bd !important;
 }
 
 #tb-body select:focus {
@@ -435,11 +435,11 @@ span#scroll-right:hover {
   /* box-shadow: 0px 3px 6px #00000029; */
 }
 .form-field label {
-    display: inline-block;
-    max-width: 100%;
-    margin-bottom: 5px;
-    font-weight: 500;
-    font-size: 14px;
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 .custom-selection {
@@ -1104,6 +1104,13 @@ h5#current-page-title {
   background-color: #ffffff;
   width: fit-content;
   margin: 8px 0;
+}
+
+div#cta-selected-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  margin-top: 1rem;
 }
 
 .text-color-palette .color-item {
