drag and drop content mappers

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -236,7 +236,7 @@ span#scroll-right:hover {
   height: 90vh;
   max-width: 320px;
   max-height: 680px;
-  background-color: #fdfdfd;
+  background-color: #EFEEEC;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   position: relative;
