--- a/src/css/toolbox.css
+++ b/src/css/toolbox.css
@@ -47,7 +47,7 @@ button {
   flex-direction: column;
   gap: 0.5rem;
   width: 100%;
-  background-color: #fdfdfd;
+  background-color: #efeeec;
   box-sizing: border-box;
   overflow-y: auto;
   overflow-x: hidden;
@@ -170,6 +170,7 @@ button {
   flex-direction: column;
   /* transition: transform 0.3s ease, background-color 0.3s ease; */
   position: relative;
+  padding: 0px;
 }
 
 .content-page-block .drag-icon {
@@ -185,9 +186,10 @@ button {
 }
 
 .content-page-block:hover {
-  border: 2px dashed #4c53577d;
+  border: 2px dashed #4c53573f;
   background-color: rgba(0, 0, 0, 0.1);
   cursor: move;
+  padding: 0px;
 }
 
 .content-page-block:hover img {
@@ -552,6 +554,113 @@ button {
   .cta-container-child {
     margin-right: 0.5rem;
   }
+}
+
+/* My Activiyt styles */
+.tb-toggle-buttons {
+  display: flex;
+  width: 90%;
+  /* max-width: 400px; */
+  justify-content: space-around;
+  margin-bottom: 10%;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.tb-toggle-buttons button {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  background: white;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  width: 80%;
+}
+.tb-chat-container {
+  width: 100%;
+  max-width: 400px;
+  height: 90vh;
+  background: #efeeec;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #efeeec;
+}
+.tb-chat-body {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: gray;
+  font-size: 16px;
+}
+
+/* calndar styles */
+
+.tb-date-selector {
+  background-color: #4a6da7;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 15px;
+  margin: 10px 20px;
+  border-radius: 8px;
+}
+
+.tb-date-text {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.tb-arrow {
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.tb-schedule {
+  margin: 20px 20px;
+}
+
+.tb-time-slot {
+  display: flex;
+  border-top: 2px solid #dcdbd9;
+  height: 40px;
+  position: relative;
+  margin-left: 40px;
+}
+
+.tb-time {
+  width: 50px;
+  color: #a0a1a4;
+  font-size: 14px;
+  margin-top: -10px;
+  font-weight: bold;
+  margin-left: -40px;
+}
+
+.tb-current-time-indicator {
+  position: absolute;
+  left: 0px;
+  right: 0;
+  height: 2px;
+  background-color: #5068a8;
+  z-index: 5;
+  top: 20px;
+}
+
+.tb-current-time-dot {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #5068a8;
+  border-radius: 50%;
+  left: 0px;
+  top: 20px;
+  transform: translateY(-3px);
+  z-index: 6;
 }
 
 .gjs-badge__name,
