--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2113,3 +2113,25 @@ button.add-new-service i {
     transform: rotate(360deg);
   }
 }
+
+
+/* Page Selector CSS */
+.page-selector {
+  width: 300px; 
+  height: 650px; 
+  border-radius: 20px; 
+  border: 5px #000000 solid;
+  background-color: #efeeec;
+  position: relative;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.page-selector .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-selector h1 {
+  font-size: 20px;
+}
